--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -13,26 +13,8 @@ vignette: >
 # Introduction to NewWave
 
 EuroBioc 2020: 14-18 December
-```{r}
-library(SingleCellExperiment)
-library(splatter)
-library(irlba)
-library(Rtsne)
-library(ggplot2)
-library(mclust)
-library(NewWave)
-```
 
-```{r}
-params <- newSplatParams()
-N=1000
-data <- splatSimulateGroups(params,batchCells=c(N/2,N/2),
-                           group.prob = rep(0.1,10),
-                           de.prob = 0.2,
-                           batch.facLoc = 2,
-                           batch.facScale = 1,
-                           verbose = FALSE) 
-```
+
 ## Workshop Description
 
 The fast development of single cell sequencing technologies in the recent years has generated a gap between the throughput of the experiments and the capability of analizing the generated data. 
@@ -83,7 +65,28 @@ In our implementation we want a batch effect to be corrected, the additionals ba
 
 Think to the group as a cell type, we will use those group to test the resulted low dimensional representation through a cluster analysis.
 
+```{r}
+suppressPackageStartupMessages(
+  {library(SingleCellExperiment)
+library(splatter)
+library(irlba)
+library(Rtsne)
+library(ggplot2)
+library(mclust)
+library(NewWave)
+  })
+```
 
+```{r}
+params <- newSplatParams()
+N=1000
+data <- splatSimulateGroups(params,batchCells=c(N/2,N/2),
+                           group.prob = rep(0.1,10),
+                           de.prob = 0.2,
+                           batch.facLoc = 2,
+                           batch.facScale = 1,
+                           verbose = FALSE) 
+```
 
 The resoult of splatter is a SingleCellExperiment with the generated data in the assays counts.
 
