--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -218,6 +218,7 @@ res3 <- newWave(data,X = "~Batch", verbose = TRUE,K=10, children=2,
                 n_gene_par = 100, n_cell_par = 100, commondispersion = FALSE)
 ```
 
+This way will store the latent rapresentation in the `reducedDim` slot.
 
 Now I can use the latent dimension rapresentation for visualization purpose:
 
@@ -240,6 +241,30 @@ cluster <- kmeans(latent, 10)
 
 adjustedRandIndex(cluster$cluster, data$Group)
 ```
+
+if we want to obtain more information about the model we can run `newFit` that
+has exactly the same parameters
+
+```{r}
+par <- newFit(data,X = "~Batch", verbose = TRUE,K=10, children=2,
+                n_gene_par = 100, n_cell_par = 100, commondispersion = FALSE)
+```
+
+The result of newFit is an object of class newmodel where are stored all the
+estimated parameter seen in the introduction.
+
+With this object we can also compute the AIC and the BIC of the model.
+
+```{r}
+newAIC(par, counts(data))
+```
+
+```{r}
+newBIC(par, counts(data))
+```
+
+
+
 # NewWave on DelayedArray
 
 In this package we can find a huge single cell dataset made by 1.3 M cell and 27 K genes.
@@ -300,7 +325,8 @@ run this code because it would be long.
 # res4 <- newWave(tenx, K=10, children=2,n_gene_par = 100, n_cell_par = 100, commondispersion = FALSE)
 ```
 
-The following figures explain the performance of NewWave in this dataset with differents approach:
+The following figures explain the performance of NewWave in this dataset with differents approach,
+I have always used only the 1000 most variable genes.
 
 ```{r, out.width = "50%", echo = FALSE}
 knitr::include_graphics("./time_newWave.png")
