--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -345,6 +345,10 @@ knitr::include_graphics("./time_newWave.png")
 knitr::include_graphics("./memory_newWave.png")
 ```
 
+# Reference 
+
+The article that describes all the results obtained comparing differents implememntation is now available on biorxiv : https://www.biorxiv.org/content/10.1101/2021.08.02.453487v1 
+
 # Session Information
 
 ```{r}
